add drag, enc
